[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-test-orchestrator"
version = "0.1.0"
description = "POC ReWOO orchestrator for automated testing"
authors = [{name = "Agent"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.0.46",
    "langchain>=0.1.0",
    "pydantic>=2.6.0",
    "typing-extensions>=4.7.0",
    "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

