[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-test-orchestrator"
version = "0.1.0"
description = "POC ReWOO orchestrator for automated testing"
authors = [{name = "Agent"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "celery>=5.3",
    "fastapi>=0.110",
    "httpx>=0.27",
    "langchain>=1.0.0a3",
    "pydantic>=2.6.0",
    "typing-extensions>=4.7.0",
    "pyyaml>=6.0",
    "langgraph>=1.0.0a2",
    "uvicorn[standard]>=0.24.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
    "flower>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
